WIP for cncserver pen control

--- a/default.cfg
+++ b/default.cfg
@@ -20,10 +20,12 @@ inputBlockTime=0.01
 
 
 [Files]
-audioInput=
-svgOutput=output.svg
+audioInput=audio/stillalive.wav
+svgOutput=audio/stillalive.svg
 
 
 [CNCServer]
-startupArguments=
+startupArguments=--botType=eggBot
 externalAddress=http://localhost:4242
+penUp = 1
+penDown =  0
