SVG OUTPUT WORKS

--- a/default.cfg
+++ b/default.cfg
@@ -1,14 +1,14 @@
 [Spiral]
 pointDistance=1
-size=15
+size=26
 
 graphIncrementFile=0.01
-graphIncrementMic=0.05
+graphIncrementMic=0.01
 
 visualScaleFile=2000
-visualScaleMic=1500
+visualScaleMic=1000
 
-sampleDelayMS=10
+sampleDelayMS=25
 
 paperSize=500
 paperRatio = (9.0, 12.0)
@@ -20,7 +20,7 @@ inputBlockTime=0.01
 
 
 [Files]
-audioInput=
+audioInput=audio/stillalive.wav
 svgOutput=output.svg
 
 
